--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "-goit-react-hw-04",
+  "name": "goit-react-hw-04",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "easy-toast": "^1.1.1",
+    "modern-normalize": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
-    "react-loader-spinner": "^4.0.0",
+    "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1"
   },
   "devDependencies": {
